Added PathComponent, now cars will not pass if there is no space in the next path. Temporary deactivated tirs. decreased chance to turn